[package]
name = "arcan-aios-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Arcan adapters implementing aiOS protocol ports"
readme = "../../README.md"

[lints]
workspace = true

[dependencies]
arcan-core = { path = "../arcan-core", version = "0.2.1" }
aios-protocol.workspace = true
aios-policy = { workspace = true }
autonomic-core = { workspace = true }
autonomic-controller = { workspace = true }
lago-core = { workspace = true }

anyhow.workspace = true
async-trait.workspace = true
reqwest.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
vigil.workspace = true

[dev-dependencies]
wiremock = "0.6"
