[package]
name = "arcan-aios-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Arcan adapters implementing aiOS protocol ports"
readme = "../../README.md"

[features]
default = []
haima = ["dep:haima-core", "dep:haima-x402", "dep:haima-wallet", "dep:haima-lago"]

[lints]
workspace = true

[dependencies]
arcan-core = { path = "../arcan-core", version = "0.2.1" }
aios-protocol.workspace = true
aios-policy = { workspace = true }
autonomic-core = { workspace = true }
autonomic-controller = { workspace = true }
lago-core = { workspace = true }

# Haima finance engine (optional, feature-gated)
haima-core = { workspace = true, optional = true }
haima-x402 = { workspace = true, optional = true }
haima-wallet = { workspace = true, optional = true }
haima-lago = { workspace = true, optional = true }

anyhow.workspace = true
async-trait.workspace = true
reqwest.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
vigil.workspace = true

[dev-dependencies]
wiremock = "0.6"
# Haima dependencies needed for tests (feature-gated tests require the types)
haima-core = { workspace = true }
haima-x402 = { workspace = true }
haima-wallet = { workspace = true }
haima-lago = { workspace = true }
