[package]
name = "arcan-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
arcan-core = { path = "../arcan-core" }
arcan-harness = { path = "../arcan-harness" }
arcan-store = { path = "../arcan-store" }
anyhow = "1"
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower-http.workspace = true
uuid.workspace = true
thiserror = "2"
chrono.workspace = true
