[package]
name = "arcan-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
arcan-core = { path = "../arcan-core" }
blake3.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
glob.workspace = true
regex.workspace = true
rmcp.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
wait-timeout.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile = "3"
