[package]
name = "arcan-lago"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Bridge between Arcan agent runtime and Lago event-sourced persistence"
readme = "../../README.md"

[dependencies]
arcan-core = { path = "../arcan-core", version = "0.2.0" }
arcan-store = { path = "../arcan-store", version = "0.2.0" }
lago-core.workspace = true
lago-journal.workspace = true
lago-store.workspace = true
lago-api.workspace = true
lago-policy.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
chrono.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
