[package]
name = "arcan-praxis"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Bridge crate: configures and registers Praxis canonical tools into Arcan's runtime"
readme = "../../README.md"

[lints]
workspace = true

[dependencies]
arcan-core = { path = "../arcan-core", version = "0.2.1" }
arcan-harness = { path = "../arcan-harness", version = "0.2.1" }
aios-protocol.workspace = true
praxis-core.workspace = true
praxis-tools.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile = "3"
