[package]
name = "arcan-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
arcan-core = { path = "../arcan-core" }
reqwest.workspace = true
rig-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
